Fixed instructions readability

--- a/packages/react-frontend/src/Recipe/recipe.css
+++ b/packages/react-frontend/src/Recipe/recipe.css
@@ -17,14 +17,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 20px;
     border-radius: 10px;
     max-width: 90%;
     text-align: center;
     font-size: 1.2rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 }
 
 .mr-form-container {
